<resources>
    <string name="app_name">Players Point</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Enter your Full Name</string>
    <string name="email">Enter Email</string>
    <string name="password">Make your Password</string>
    <string name="phone">Enter your 10 digit Number</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="tournaments">Tournaments</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="ask">Ask</string>
    <string name="welcome_to_gaming_adda">Welcome To Players Point</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="about_fragment">About Fragment</string>
    <string name="ask_fragment">Ask Fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="tournament_fragement">Click on Tournament to Join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="tournament_time1">Start</string>
    <string name="tournament_time2">End</string>
    <string name="name_of_the_tournament">TournamentName</string>
    <string name="rs_40">40</string>
    <string name="background">background</string>
    <string name="hyphen">-</string>
    <string name="tournament_details">Tournament Details</string>
    <string name="join_now">Join Now</string>
    <string name="tournamentimage">tournamentimage</string>
    <string name="name">Name</string>
    <string name="send_by_upi">Pay By UPI</string>
    <string name="time">Time</string>
    <string name="navigate">navigate</string>
    <string name="select_a_tournament">Select a Tournament</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="wallet">Wallet</string>
    <string name="total_cash">Total Cash</string>
    <string name="winning_cash">Winning Cash</string>
    <string name="deposit_cash">Deposit Cash</string>
    <string name="withdraw">Request Withdraw</string>
    <string name="add_cash">Add Cash</string>
    <string name="amount">Amount</string>
    <string name="Joined">Joined</string>
    <string name="pubgid">Enter your PubgID</string>
    <string name="pubg_username">Enter your Pubg Username</string>
    <string name="change">Change</string>
    <string name="OK">OK</string>
    <string name="room_id">Room Id</string>
    <string name="room_password">Room Password</string>
    <string name="topic">Topic(less than 25 Words)</string>
    <string name="description">Description(less than 150 Words)</string>
    <string name="subscribe_our_youtube_channel">Subscribe our Youtube Channel</string>
    <string name="follow_us_on_instagram">Follow Us on Instagram</string>
    <string name="like_our_facebook_page">Like Our Facebook Page</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="resend">Resend</string>
    <string name="type">Type</string>
    <string name="refresh">Refresh</string>
    <string name="change_password">Change PassWord</string>
    <string name="map">Map</string>
    <string name="enter_your_upi_id">Enter your UPI ID</string>
    <string name="confirm">Confirm</string>
    <string name="enter_bank_account_holder_name">Enter Bank Account Holder Name</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="enter_bank_account_number">Enter Bank Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
</resources>