<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     <group android:checkableBehavior="single">
     <item
         android:id="@+id/tournaments"
         android:title="@string/tournaments"
         android:icon="@drawable/ic_tournament"
          />
     <item
         android:id="@+id/profile"
         android:title="@string/profile"
         android:icon="@drawable/ic_profile"
         />
     <item
         android:id="@+id/about"
         android:title="@string/about"
         android:icon="@drawable/ic_about"
         />
     <item
         android:id="@+id/ask"
         android:title="@string/ask"
         android:icon="@drawable/ic_help"
         />
          <item
              android:id="@+id/wallet"
               android:title="@string/wallet"
               android:icon="@drawable/ic_wallet"
               />

     <item android:id="@+id/logout"
          android:title="@string/log_out"
          android:icon="@drawable/ic_logout"
          />
     </group>
</menu>