<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:background="@color/mycolor20"
    tools:context=".Fragment.Ask">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/logoprofile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo2"
        android:contentDescription="Logo" />
    <EditText
        android:id="@+id/etasktopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/topic"
        android:textColorHint="@color/mycolor2"
        android:textStyle="bold"
        android:textColor="@color/mycolor2"
        android:maxLength="25"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/logoprofile"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/mycolor6"
        />
    <EditText
        android:id="@+id/etask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColorHint="@color/mycolor2"
        android:textColor="@color/mycolor2"
        android:hint="@string/description"
        android:layout_marginTop="25dp"
        android:maxLength="150"
        android:layout_below="@id/etasktopic"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/mycolor6"
        />

    <Button
        android:id="@+id/btsubmitask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/submit"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/mycolor3"
        android:layout_below="@id/etask"
        android:textColor="@color/mycolor2"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/imgcheck"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/btsubmitask"
            android:layout_margin="20dp"
        />
     <Button
         android:id="@+id/btsubscribeyoutube"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgcheck"
         android:layout_marginTop="30dp"
         android:textColor="@color/mycolor6"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_centerInParent="true"
         android:text="@string/subscribe_our_youtube_channel"
         android:background="@drawable/youtube"
         android:layout_marginStart="15dp"
         android:padding="10dp"
         android:layout_marginEnd="90dp"
     />
    <Button
        android:id="@+id/btfollowInstagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btsubscribeyoutube"
        android:layout_marginTop="15dp"
        android:textColor="@color/mycolor6"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:text="@string/follow_us_on_instagram"
        android:background="@drawable/instagram"
        android:layout_marginStart="15dp"
        android:padding="10dp"
        android:layout_marginEnd="90dp"
        />
    <Button
        android:id="@+id/btlikefacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btfollowInstagram"
        android:layout_marginTop="15dp"
        android:textColor="@color/mycolor6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/like_our_facebook_page"
        android:background="@drawable/facebook"
        android:layout_marginStart="15dp"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="90dp"
        />
</RelativeLayout>