<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".Fragment.Wallet"
    android:background="@color/mycolor20">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/CashBalanceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/logoprofile"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo2"
            android:contentDescription="Logo" />
        <TextView
            android:id="@+id/txtwinningCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/winning_cash"
            android:background="@color/mycolor6"
            android:padding="15dp"
            android:textColor="@color/mycolor2"
            android:layout_below="@+id/logoprofile"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtwinningCash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/mycolor2"
            android:drawableStart="@drawable/ic_rupee"
            android:layout_marginStart="250dp"
            android:layout_below="@+id/logoprofile"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/txtdepositCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtwinningCash"
            android:layout_marginTop="20dp"
            android:text="@string/deposit_cash"
            android:background="@color/mycolor6"
            android:padding="15dp"
            android:textColor="@color/mycolor2"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtdepositCash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/txtwinningCash1"
            android:textColor="@color/mycolor2"
            android:drawableStart="@drawable/ic_rupee"
            android:layout_marginStart="250dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            />
        <Button
            android:id="@+id/btwithdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            android:textColor="@color/mycolor6"
            android:textStyle="bold"
            android:textSize="25dp"
            android:background="@color/mycolor13"
            android:layout_below="@id/btlikefacebook"
            />
        <Button
            android:id="@+id/btaddcash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_cash"
            android:textColor="@color/mycolor6"
            android:textStyle="bold"
            android:textSize="22dp"
            android:padding="10dp"
            android:background="@color/mycolor4"
            android:layout_below="@+id/txtdepositCash"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="50dp"
            />
        <Button
            android:id="@+id/btsubscribeyoutube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btaddcash"
            android:layout_marginTop="20dp"
            android:textColor="@color/mycolor6"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/subscribe_our_youtube_channel"
            android:background="@drawable/youtube"
            android:layout_marginStart="65dp"
            android:padding="10dp"
            android:layout_marginEnd="70dp"
            />
        <Button
            android:id="@+id/btfollowInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btsubscribeyoutube"
            android:layout_marginTop="15dp"
            android:textColor="@color/mycolor6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/follow_us_on_instagram"
            android:background="@drawable/instagram"
            android:layout_marginStart="65dp"
            android:padding="10dp"
            android:layout_marginEnd="70dp"
            />
        <Button
            android:id="@+id/btlikefacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btfollowInstagram"
            android:layout_marginTop="5dp"
            android:textColor="@color/mycolor6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/like_our_facebook_page"
            android:background="@drawable/facebook"
            android:layout_marginStart="65dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            />
    </RelativeLayout>


</ScrollView>