<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mycolor20"
    tools:context=".Activity.PaymentActivity">
    <ImageView
        android:id="@+id/logoprofile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo2"
        android:contentDescription="Logo" />
    <EditText
        android:id="@+id/etaddcash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/amount"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        android:textSize="16sp"
        android:layout_below="@+id/logoprofile"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:background="@color/mycolor6"
        android:textColor="@color/mycolor2"
        />
    <Button
        android:id="@+id/btaddcash1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_cash"
        android:layout_below="@id/etaddcash"
        android:textColor="@color/mycolor6"
        android:textStyle="bold"
        android:padding="20dp"
        android:textSize="20dp"
        android:background="@color/mycolor4"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        />
    <Button
        android:id="@+id/btwithdraw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:layout_alignParentBottom="true"
        android:textColor="@color/mycolor6"
        android:textStyle="bold"
        android:textSize="20dp"
        android:padding="20dp"
        android:background="@color/mycolor13"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btjoinTournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btaddcash1"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/joinedcustomize"
        android:padding="20dp"
        android:visibility="gone"
        android:text="@string/join_now"
        android:textColor="@color/mycolor4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/btjoinTournament"
        android:padding="15dp"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:background="@color/mycolor6"
        android:textColor="@color/mycolor2"
        />
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        android:textSize="16sp"
        android:layout_below="@id/txt1"
        android:layout_marginTop="50dp"
        android:background="@color/mycolor6"
        android:textColor="@color/mycolor2"
        />
</RelativeLayout>